clusters/onprem-dev/cilium/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
  - name: public-gateway
    namespace: gateway
  hostnames:
  - hubble.yongun.shop
  rules:
    - backendRefs:
      - name: hubble-ui
        namespace: kube-system
        port: 80
